# cs498_robotarm

./: CMakeLists.txt  README.md  rpi_setup.txt  run_as_root.sh
include/controllers/: ControllerBridge.hpp  ControllerStructures.hpp
include/pi3hat_hardware_interface/: pi3hat_hardware_interface.hpp
kdl_tutorial_01/: CMakeLists.txt  camera_intrinsics.txt  package.xml
kdl_tutorial_01/launch/: camdbg.launch.xml  fk_app.launch.xml  robot_description.launch.py
kdl_tutorial_01/src/: camdbg.cpp  fk.cpp  main.cpp  plot_trajectories.py
kdl_tutorial_01/urdf/: myrobot.urdf.xacro
src/: pi3hat_hardware_interface.cpp
src/controllers/: ControllerBridge.cpp
src/controllers/wrappers/: MoteusWrapper.cpp
test/bringup/config/: test_myrobot.yaml  test_single_motor.yaml  test_three_motors.yaml  test_twelve_motors.yaml
test/bringup/launch/: spawn_robot.launch.py  test_myrobot.launch.py  test_single_moteus.launch.py  test_three_moteus.launch.py  test_twelve_moteuses.launch.py
test/urdf/: base_fk.py  my_fk_ik.py  my_ik.py  myrobot.urdf.xacro  test_single_moteus.urdf.xacro  test_three_moteus.urdf.xacro  test_twelve_moteuses.urdf.xacro
test/urdf/core/: simple_transmission_macro.urdf.xacro  single_joint.urdf.xacro  single_motor_hardware.urdf.xacro
